--- a/src/sass/layout/_title.scss
+++ b/src/sass/layout/_title.scss
@@ -1,5 +1,6 @@
 .title{
     color: var(--color-white);
+    text-align: center;
     text-transform: uppercase;
     text-shadow:
     1px 1px 0 var(--color-blue),
