--- a/src/sass/layout/_projects.scss
+++ b/src/sass/layout/_projects.scss
@@ -1,8 +1,23 @@
 .projects{
     display: grid;
-    max-width: calc(100vw - 60px);
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
+    @media screen and (max-width: 767px) {
+      max-width: calc(100vw - 15px);
+      grid-template-columns: 290px;
+      gap: 15px;
+    }
+  
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      max-width: calc(100vw - 40px);
+      grid-template-columns: 344px 344px;
+      gap: 20px;
+    }
+  
+  @media screen and (min-width: 1024px) {
+      max-width: calc(100vw - 50px);
+      grid-template-columns: 304px 304px 304px;
+      gap: 30px;
+    }
+    
 
     padding: 16px 0 50px;
     margin: 0px auto;
@@ -30,7 +45,6 @@
 .project_img{
     width: 100%;
     height: 370px;
-    object-fit: cover;
 
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
